# Quant_trading

./: README.md  main.py  pyproject.toml  spy_backtest.ipynb  walk_forward.py
Archive/: desktop.ini  main.py
Archive/src/: backtest.py  data.py  metrics.py
config/: periods.py  universe.py
src/: strategy.py
src/quant_trading/: __init__.py
src/quant_trading/backtesting/: __init__.py  base.py  vectorized.py
src/quant_trading/data/: __init__.py  base.py  yfinance_provider.py
src/quant_trading/execution/: __init__.py  base.py
src/quant_trading/risk/: __init__.py  base.py
src/quant_trading/strategies/: __init__.py  base.py  cross_sectional_momentum.py  moving_average.py  regime_adaptive.py  rsi_mean_reversion.py
tests/: test_current_system.py
