[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading"
version = "0.1.0"
description = "A modular Python project for quantitative trading research and execution."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.0",
    "yfinance>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
